# yandex_cpp_belts

./: .gitignore  README.md
01_white_belt/: askTimeServer.cpp  rational_final.cpp  tmp_rational_calc.cpp  tmp_rational_eq_add_sub.cpp.cpp  tmp_rational_eq_add_sub_01.cpp  (+4 more)
03_red_belt/: CMakeLists.txt  clean.sh  profile.h  test_runner.h
03_red_belt/01_week/: log_macros.cpp  paginator.cpp  table.cpp
03_red_belt/01_week/01_max_element_if/: CMakeLists.txt  max_element_if.cpp
03_red_belt/01_week/02_log/: CMakeLists.txt  log.cpp
03_red_belt/01_week/03_aviascanner/: CMakeLists.txt  sort_by.cpp
03_red_belt/01_week/04_aviascanner_update/: CMakeLists.txt  update_field.cpp
03_red_belt/01_week/05_bad_macros/: CMakeLists.txt  print_values.cpp
03_red_belt/01_week/06_uniq_id/: CMakeLists.txt  uniq_id.cpp
03_red_belt/01_week/07_table/: CMakeLists.txt  table.cpp
03_red_belt/01_week/08_deque/: CMakeLists.txt  deque_of_two_vectors.cpp
03_red_belt/01_week/09_paginator/: CMakeLists.txt  paginator.cpp
03_red_belt/01_week/avia_scanner/: sort_by.cpp  update_field.cpp
03_red_belt/02_week/: learner.cpp  main.cpp  student_compare.cpp
03_red_belt/02_week/01_sort_students/: CMakeLists.txt  sort_students.cpp
03_red_belt/02_week/02_learner/: learner.cpp  words.txt
03_red_belt/02_week/03_express/: express.cpp
03_red_belt/03_week/01_object_pool/: object_pool.cpp
03_red_belt/03_week/02_swap_sort_copy/: swap_sort_copy.cpp
03_red_belt/03_week/03_simple_vector/: simple_vector.cpp  simple_vector.h
03_red_belt/03_week/04_linked_list/: linked_list.cpp  linked_list.h
03_red_belt/04_week/01_athletes/: athletes.cpp
03_red_belt/04_week/02_stack_vector/: stack_vector.cpp  stack_vector.h
03_red_belt/04_week/03_translator/: translator.cpp
03_red_belt/04_week/04_airport_counter/: airport_counter.cpp
03_red_belt/04_week/05_text_editor/: text_editor.cpp
03_red_belt/04_week/06_web_server/: stats.cpp  stats.h
03_red_belt/05_week/01_josephus_permutation/: josephus_permutation.cpp
03_red_belt/05_week/08_matrix_sum/: matrix_sum.cpp
03_red_belt/05_week/09_explore_key_words/: explore_key_words.cpp
03_red_belt/05_week/10_synchronized/: synchronized.cpp
(+35 files in other folders)
